# api/internal/server/user.go
@@ -1,18 +1,16 @@
 package server
 
 import (
-	"errors"
 	"net/http"
 
 	"github.com/Spacelocust/for-democracy/internal/model"
 	"github.com/gin-gonic/gin"
-	"gorm.io/gorm"
 )
 
 func (s *Server) RegisterUsersRoutes(r *gin.Engine) {
 	route := r.Group("/users")
 
-	route.GET("/admin", s.GetAdmin)
+	route.GET("/admin", s.AuthMiddleware, s.GetAdmin)
 	route.GET("", s.GetUsers)
 }
 
@@ -46,18 +44,10 @@ func (s *Server) GetUsers(c *gin.Context) {
 // @Failure 500  {object}  server.ErrorResponse
 // @Router /users/admin [get]
 func (s *Server) GetAdmin(c *gin.Context) {
-	db := s.db.GetDB()
+	admin := checkAuth(c)
 
-	var admin model.User
-
-	if err := db.First(&admin, "role = ?", "admin").Error; err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			s.NotFoundResponse(c, "user")
-
-			return
-		}
-
-		s.InternalErrorResponse(c, err)
+	if (admin.Role != "admin") {
+		s.ForbiddenResponse(c, "You are not an admin")
 
 		return
 	}
