# api/internal/validators/admin.go
@@ -1,0 +1,6 @@
+package validators
+
+type Admin struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
